syntax = "proto3";

package v1;


option go_package = "v1";

/**
* Service for user entity
*/
service UserService {
  /**
  * Get users list
  */
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
  }
}

message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
}
message ListUsersRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListUsersResponse {
  // The field name should match the noun "User" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated User Users = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}